# Text_Generator

./: .gitignore  AutomataTheory.txt  CMakeLists.txt  Input.txt  MonkBoek.txt  Parse.txt  README.md  TODO.txt  Testinp.txt
GUI/: MainGuiWindow.cpp  MainGuiWindow.h
TOi/Anass/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  StateNFA.cpp  StateNFA.h  TransitionDFA.cpp  TransitionDFA.h  TransitionNFA.cpp  TransitionNFA.h  main.cpp
TOi/Chloe/: DFA.cpp  NFA.cpp  RE.h  State.cpp  State.h
TOi/Yassir/MSSC/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  State.h  Transition.cpp  Transition.h
TOi/Yassir/PDA/: DFA.cpp  DFA.h  json.hpp
TOi/Yousra/: Automata.cpp  NFA.cpp
src/: HigherOrderMarkovChain.cpp  HigherOrderMarkovChain.h  HigherOrderMarkovState.cpp  HigherOrderMarkovState.h  MarkovChain.cpp  MarkovChain.h  MarkovState.cpp  MarkovState.h  Parse.txt  Parser.cpp  Parser.h  State.cpp  State.h  main.cpp
src/TOi/Anass/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  StateNFA.cpp  StateNFA.h  TransitionDFA.cpp  TransitionDFA.h  TransitionNFA.cpp  TransitionNFA.h
src/TOi/Chloe/: DFA.h  NFA.h  RE.cpp
src/TOi/Yassir/MSSC/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  State.cpp  State.h  Transition.cpp  Transition.h
src/TOi/Yassir/PDA/: DFA.cpp  DFA.h  json.hpp
src/TOi/Yousra/: Automata.h  DFA.cpp  DFA.h  NFA.h  README.md
